--- a/src/style.css
+++ b/src/style.css
@@ -28,8 +28,8 @@
   min-width: 350px;
   width: fit-content;
   top: 100%;
-  right: 0;
-  left: unset;
+  right: unset;
+  left: 0;
   margin-left: unset;
   margin-right: unset;
 }
@@ -343,7 +343,7 @@ button:not(:disabled),
   margin-top: calc(-1 * var(--bs-gutter-y));
   margin-right: calc(-0.5 * var(--bs-gutter-x));
   margin-left: calc(-0.5 * var(--bs-gutter-x));
-  justify-content: center;
+  justify-content: space-between;
 }
 .row > * {
   flex-shrink: 0;
